<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 – 2015 Ricki Hirner (bitfire web engineering).
  ~ Copyright (c) 2015 – 2016 ZUK.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- common strings -->
    <string name="app_name" translatable="false">ContactsDAV</string>
    <string name="help">Help</string>
    <string name="next">Next</string>
    <string name="please_wait">Please wait</string>
    <string name="send">Send</string>
    <string name="skip">Skip</string>

    <!-- global settings -->
    <string name="logging_davdroid_file_logging">DAVdroid file logging</string>
    <string name="logging_to_external_storage">Logging to external storage: %s</string>
    <string name="logging_to_external_storage_warning">Delete logs as soon as possible!</string>
    <string name="logging_couldnt_create_file">Couldn\'t create external log file: %s</string>
    <string name="logging_no_external_storage">External storage not found</string>

    <!-- DavService -->
    <string name="dav_service_refresh_failed">Service detection failed</string>
    <string name="dav_service_refresh_couldnt_refresh">Couldn\'t refresh collection list</string>

    <!-- AddAccountActivity -->
    <string name="login_user_name">User name</string>
    <string name="login_password">Password</string>

    <string name="login_apple_id_label" translatable="false">Apple ID</string>
    <string name="login_mi_id_label">Mi Account/Phone</string>
    <string name="login_server_name_hint">Server my.webhost.com</string>
    <string name="login_account_description_hint">Description</string>
    <string name="login_label">Login</string>

    <!-- Settings activity -->
    <string name="settings_title">Settings</string>
    <string name="settings_authentication">Authentication</string>
    <string name="settings_username">User name</string>
    <string name="settings_enter_username">Enter user name:</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_summary">Update the password according to your server.</string>
    <string name="settings_enter_password">Enter your password:</string>
    <string name="settings_sync">Synchronization</string>
    <string name="settings_sync_interval_contacts">Contacts sync. interval</string>
    <string name="settings_sync_summary_manually">Only manually</string>
    <string name="settings_sync_summary_periodically" tools:ignore="PluralsCandidate">Every %d minutes + immediately on local changes</string>
    <string name="settings_sync_summary_not_available">Not available</string>
    <string-array name="settings_sync_interval_seconds">
        <item>-1</item>
        <item>3600</item>
        <item>7200</item>
        <item>14400</item>
        <item>86400</item>
    </string-array>
    <string-array name="settings_sync_interval_names">
        <item>Only manually</item>
        <item>Every hour</item>
        <item>Every 2 hours</item>
        <item>Every 4 hours</item>
        <item>Once a day</item>
    </string-array>
    <string name="settings_function_test" translatable="false">Function Test</string>
    <string name="settings_debug">Debugging</string>
    <string name="settings_security_warning">Potential security risk!</string>
    <string name="settings_log_to_external_file">Log to external file</string>
    <string name="settings_log_to_external_file_confirmation">External log files will contain private data and be accessible by other apps. Turn off external logging and delete the log files after use.</string>
    <string name="settings_log_to_external_file_on">Logs are written to %s (if possible)</string>
    <string name="settings_log_to_external_file_no_external_storage">External storage is not available</string>
    <string name="settings_log_to_external_file_off">Logs are written to ADB</string>
    <string name="settings_log_verbose">Verbose logging</string>
    <string name="settings_log_verbose_on">Log synchronization information and network traffic</string>
    <string name="settings_log_verbose_off">Log only synchronization information</string>

    <string name="setup_login_failed">Login failed</string>
    <string name="setup_login_network_error">Please check your network connection!</string>
    <string name="setup_login_icloud_info_error">Please check your Apple ID and password!</string>
    <string name="setup_login_mi_info_error">Please check your Mi Account/Phone and password!</string>
    <string name="setup_login_icloud_info_error_for_two_step">Please check your Apple ID and password!\n\nIf you\'ve enabled TWO-STEP Verification, make sure you\'ve created and entered an <a href="https://support.apple.com/en-us/HT204397">APP-SPECIFIC PASSWORDS</a>. Please, open <a href="https://appleid.apple.com">Apple ID account page</a> to create an APP-SPECIFIC PASSWORDS.</string>
    <string name="setup_dialog_retry">Retry</string>
    <string name="setup_add_account">Add account</string>
    <string name="setup_querying_server_icloud">iCloud Loading. Please wait…</string>
    <string name="setup_querying_server_carddav">CardDAV Loading. Please wait…</string>

    <!-- sync errors and DebugInfoActivity -->
    <string name="authority_log_provider" translatable="false">at.bitfire.davdroid.log</string>
    <string name="debug_info_title">Debug info</string>
    <string name="sync_error_permissions">ContactsDAV permissions</string>
    <string name="sync_error_permissions_text">Additional permissions required</string>
    <string name="sync_error_calendar">Calendar synchronization failed (%s)</string>
    <string name="sync_error_contacts">Address book synchronization failed (%s)</string>
    <string name="sync_error_tasks">Task synchronization failed (%s)</string>
    <string name="sync_error">Error while %s</string>
    <string name="sync_error_http_dav">Server error while %s</string>
    <string name="sync_error_local_storage">Database error while %s</string>
    <string-array name="sync_error_phases">
        <item>preparing synchronization</item>
        <item>querying capabilities</item>
        <item>processing locally deleted entries</item>
        <item>preparing created/modified entries</item>
        <item>uploading created/modified entries</item>
        <item>checking sync state</item>
        <item>listing local entries</item>
        <item>listing remote entries</item>
        <item>comparing local/remote entries</item>
        <item>downloading remote entries</item>
        <item>saving sync state</item>
    </string-array>
    <string name="sync_error_unauthorized">User name/password wrong</string>

    <!-- Accounts -->
    <string name="default_carddev_account_name" translatable="false">CardDAV</string>
    <string name="default_carddav_account_type" translatable="false">com.zui.davdroid.account</string>
    <string name="icloud_account_name" translatable="false">iCloud</string>
    <string name="icloud_account_type" translatable="false">com.zui.davdroid.account.icloud</string>
    <string name="mi_account_name">Mi Account</string>
    <string name="mi_account_type" translatable="false">com.zui.davdroid.account.mi</string>

    <string name="login_account_not_created">Account could not be created, You can\'t have two accounts with the same name.</string>

</resources>
